--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,6 @@ dependencies:
   emoji_picker_flutter: ^1.6.0
   giphy_get: ^3.2.0
   permission_handler: ^11.0.1
-  agora_rtc_engine: ^6.3.2
   flutter_smart_dialog: ^4.8.2
   audioplayers: ^5.0.0
   in_app_purchase: ^3.1.7
@@ -73,7 +72,8 @@ dependencies:
   social_login_buttons: ^1.0.7
   flutter_facebook_auth: ^6.0.1
   google_sign_in: ^6.1.4
-
+  agora_rtc_engine: 6.2.1
+  
 dependency_overrides:
 # added to fix the issue on ios - 28JUN2023
   #webview_flutter_wkwebview: ^3.5.0
